# lightmapper

./: .gitmodules  README.md  lightmapper.h
example/: CMakeLists.txt  castle_license.txt  example.c  gazebo.mtl  yocto_obj.h
